Version 4.9.5 - 19 March 2008, Thierry Vignaud

- rpmdrake:
  o readd by_source view (removed on 2006-07-09)

Version 4.9.4 - 19 March 2008, Thierry Vignaud

- rpmdrake:
  o handle migrating config file from rpmdrake <= 4.9
  o restore sorting packages in 'by_group' view
    (regression introduced in 4.8 while restoring flat mode)

Version 4.9.3 - 19 March 2008, Thierry Vignaud

- rpmdrake:
  o fix crash with cs, cy, eu, hu, nl, pl & zh_CN locales (#39052)
    (regression introduced in 4.9: "move view pull down menu as a real
    menu")

Version 4.9.2 - 18 March 2008, Thierry Vignaud

- restore translation of "Find:" 

Version 4.9.1 - 18 March 2008, Thierry Vignaud

- rpmdrake:
  o add "search:" label again (was removed in 4.8 on 17 March 2008)

Version 4.9 - 18 March 2008, Thierry Vignaud

- fix displaying data about packages when choosing one while resolving
  dependancies (#39042)
  (regression introduced in "display in bold that priority updates
  require restarting" in 4.6 on 10 March 2008)
- rpmdrake:
  o be nice with UMPC screens:
    * enable to shrink package groups tree (#38762)
    * hide banner if screen height is small than 600 px (#38943)
  o move view pull down menu as a real menu

Version 4.8 - 17 March 2008, Thierry Vignaud

- tell the user to "restart system" when needed (needs urpmi-5.14)
- rpmdrake:
  o add tooltips to pull down menus & to search entry
  o allow to sort packages by size (#25417)
  o make find box larger and left-aligned (#38298)
  o restore flat mode (#25770)

Version 4.7 - 17 March 2008, Thierry Vignaud

- consider rpm-summary-non-free when fetching package summaries
- rpmdrake:
  o split filters (all, installed, non installed) from views (GUI,
    meta packages, updates, ...)
  o update GUI package list

Version 4.6.2 - 14 March 2008, Thierry Vignaud

- write configuration before restarting after priority upgrades so
  that we don't ask questions again
- rpmdrake:
  o kill "Mandriva choices"