@@ -1,3 +1,6 @@
+- rpmdrake:
+  o fix sorting in "by_source" view
+
 Version 4.9.5 - 19 March 2008, Thierry Vignaud
 
 - rpmdrake:
